--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ if (STATIC_BUILD)
 SET( Boost_USE_STATIC_LIBS ON  )
 SET( Protobuf_USE_STATIC_LIBS ON )
 endif (STATIC_BUILD)
+set(CMAKE_MACOSX_BUNDLE TRUE)
 
 FIND_PACKAGE( Boost 1.67 COMPONENTS system REQUIRED )
 FIND_PACKAGE (Protobuf REQUIRED)
