--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ if (UNIX)
  find_package(PkgConfig)
  pkg_check_modules (LIBUSB REQUIRED libusb-1.0)
 elseif (WIN32)
+ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -utf-8")
+ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -utf-8")
  if (NOT IS_DIRECTORY $ENV{vcpkg_root})
   message(FATAL_ERROR "you must specify vcpkg_root for seeking packages")
  endif()
