cross-platform mkdir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ endif()
 
 SET(PROTO_GEN_DIR ${CMAKE_CURRENT_BINARY_DIR}/protocpp)
 
+file(MAKE_DIRECTORY ${PROTO_GEN_DIR})
+
 INCLUDE_DIRECTORIES(depends/json depends/jsonrpc-server-lib )
 INCLUDE_DIRECTORIES(depends/protodef)
 INCLUDE_DIRECTORIES(${PROTO_GEN_DIR})
@@ -50,7 +52,6 @@ set_source_files_properties(${PROTOSRCS} ${PROTOHDRS} PROPERTIES generated TRUE)
 
 add_custom_command(
     OUTPUT ${PROTOSRCS} ${PROTOHDRS}
-    COMMAND mkdir -p ${PROTO_GEN_DIR}
     COMMAND ${Protobuf_PROTOC_EXECUTABLE} --cpp_out ${PROTO_GEN_DIR} -Idepends/protodef messages.proto
 )
 
