--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,17 @@ elseif (WIN32)
   message(FATAL_ERROR "you must specify vcpkg_root for seeking packages")
  endif()
  message(STATUS "win32 selected. seeking libusb")
- if (NOT IS_DIRECTORY $ENV{vcpkg_root}/installed/x86-windows/include/libusb-1.0)
+ if( CMAKE_SIZEOF_VOID_P EQUAL 4)
+     set (wintarget x86)
+ else()
+     set (wintarget x64)
+ endif()
+ if (NOT IS_DIRECTORY $ENV{vcpkg_root}/installed/${wintarget}-windows/include/libusb-1.0)
   message(FATAL_ERROR "please install libusb var vcpkg")
  endif()
- set(LIBUSB_CFLAGS -D_WIN32_WINNT=0x0601 -I$ENV{vcpkg_root}/installed/x86-windows/include/libusb-1.0)
- set(LIBUSB_LIBRARIES_DIR_DEBUG $ENV{vcpkg_root}/installed/x86-windows/debug)
- set(LIBUSB_LIBRARIES_DIR_REL $ENV{vcpkg_root}/installed/x86-windows)
+ set(LIBUSB_CFLAGS -D_WIN32_WINNT=0x0601 -I$ENV{vcpkg_root}/installed/${wintarget}-windows/include/libusb-1.0)
+ set(LIBUSB_LIBRARIES_DIR_DEBUG $ENV{vcpkg_root}/installed/${wintarget}-windows/debug)
+ set(LIBUSB_LIBRARIES_DIR_REL $ENV{vcpkg_root}/installed/${wintarget}-windows)
  SET(LIBUSB_LIBRARIES_DEBUG ${LIBUSB_LIBRARIES_DIR_DEBUG}/lib/libusb-1.0.lib)
  SET(LIBUSB_LIBRARIES_REL ${LIBUSB_LIBRARIES_DIR_REL}/lib/libusb-1.0.lib)
 endif()
